[package]
name = "fmd"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tree_magic = "*"
fuzzyhash = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
md5 = "*"
rust-crypto = "*"
sha256 = "*"
dunce = "*"
path_abs = "*"
chrono = "*"
lazy_static = "*"
whoami = "*"
goblin = "*"
entropy = "*"
ntfs = "*"
anyhow = "*"
epochs = "*"
is_elevated = "*"
exe = "*"

[profile.release]
lto = true
panic = 'abort'
opt-level = "s"
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
strip = true