[package]
name = "fmd"
version = "0.9.9"
edition = "2021"
authors = ["Brian Kellogg"]
description = "Parse file meta data for forensics purposes."
repository = "https://github.com/forensicmatt/RustyLnk"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tree_magic = "*"
fuzzyhash = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
md5 = "*"
rust-crypto = "*"
dunce = "*"
path_abs = "*"
chrono = "*"
lazy_static = "*"
whoami = "*"
goblin = "*"
entropy = "*"
ntfs = "*"
anyhow = "*"
epochs = "*"
is_elevated = "*"
exe = "*"
#rand = "*"
lnk = "*"

[profile.release]
lto = "fat"
panic = 'abort'
opt-level = "s"
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
strip = "symbols"