[package]
name = "fmd"
version = "1.0.2"
edition = "2021"
authors = ["Brian Kellogg"]
description = "Parse file meta data for forensics purposes."
repository = "https://github.com/theflakes/fmd"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tree_magic = "*"
fuzzyhash = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
md5 = "*"
sha1 = "*"
sha2 = "*"
dunce = "*"
path_abs = "*"
chrono = "*"
lazy_static = "*"
whoami = "*"
goblin = "*"
entropy = "*"
ntfs = "*"
anyhow = "*"
epochs = "*"
is_elevated = "*"
exe = "*"
#rand = "*"
lnk = "*"

[profile.release]
lto = "fat"
panic = 'abort'
opt-level = "s"
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
strip = "symbols"